# 2025-exercises

./: .gitignore  README.md  pyproject.toml
output/: ft.json  gemini-chat-theater.md  gemini-chat.md  l1.html  l12.html  l6-random.html  nn_output.md
output/gemini/: example-1.md  example-5.md  example-9.md
scripts/: week1_solution.py  week2_extra.py  week2_network.py  week2_tree.py  week3_embeddings.py  week3_torch.py  week4_llm.py  week5_attention.py  week6_gemini.py
src/ai4h/: __init__.py  helpers.py
src/ai4h/models/: embeddings.py  ensemble.py  linear_model.py  linear_models.py  network.py  tree.py
tests/: test_embeddings.py  test_network.py  test_tree.py
