[project]
name = "ai4h"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jsr-p", email = "jsr-p@sodas.ku.dk" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.2",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.scripts]
ai4h = "ai4h:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

# Extra
[tool.ruff]
extend-select = ["I"]
ignore = ["F401"]
